--- a/package.json
+++ b/package.json
@@ -6,19 +6,39 @@
 	"scripts": {
 		"dev": "next dev --turbopack",
 		"build": "next build",
-		"start": "next start"
+		"start": "next start",
+		"lint": "biome check",
+		"dev:docker:up": "dotenv -e .env.development -- docker-compose up -d",
+		"dev:docker:down": "dotenv -e .env.development -- docker-compose down",
+		"dev:db:migrate": "dotenv -e .env.development -- drizzle-kit push",
+		"dev:db:generate": "npx drizzle-kit generate",
+		"dev:db:seed": "dotenv -e .env.development -- tsx ./lib/database/seed.ts",
+		"dev:db:reset": "dotenv -e .env.development -- tsx ./lib/database/reset.ts",
+		"dev:db:studio": "dotenv -e .env.development -- drizzle-kit studio"
 	},
 	"dependencies": {
+		"drizzle-orm": "^0.44.2",
+		"next": "15.3.3",
+		"pg": "^8.16.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"next": "15.3.3"
+		"react-toastify": "^11.0.5",
+		"ulid": "^3.0.0",
+		"uninstall": "^0.0.0",
+		"zod": "^3.25.56"
 	},
 	"devDependencies": {
-		"typescript": "^5",
+		"@biomejs/biome": "1.9.4",
+		"@faker-js/faker": "^9.8.0",
+		"@tailwindcss/postcss": "^4",
 		"@types/node": "^20",
+		"@types/pg": "^8.15.4",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
-		"@tailwindcss/postcss": "^4",
-		"tailwindcss": "^4"
+		"dotenv-cli": "^8.0.0",
+		"drizzle-kit": "^0.31.1",
+		"tailwindcss": "^4",
+		"tsx": "^4.19.4",
+		"typescript": "^5"
 	}
 }
